fixing jumping issue on map and copy

--- a/css/styles.css
+++ b/css/styles.css
@@ -639,7 +639,7 @@ nav a {color:#22221e;}
 	line-height:0;
 }
 .tab-area .logos-2 {
-	padding: 37px 0;
+	padding: 35px 0;
 	margin-top: 1px;
 }
 .tab-area .logos li {
